# ChangeLog for app-misc/elasticsearch
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*elasticsearch-1.3.2 (19 Aug 2014)

  19 Aug 2014;  <johann@gentoo.org> +elasticsearch-1.3.2.ebuild:
  Bumped elasticsearch

*elasticsearch-1.2.1 (16 Jun 2014)

  16 Jun 2014;  <johann@gentoo.org> +elasticsearch-1.2.1.ebuild,
  -elasticsearch-1.2.0.ebuild:
  Version bumped to 1.2.1

*elasticsearch-1.1.1 (27 May 2014)
*elasticsearch-1.2.0 (27 May 2014)

  27 May 2014; Johann Schmitz <ercpe@gentoo.org> +elasticsearch-1.1.1.ebuild,
  +elasticsearch-1.2.0.ebuild, +files/elasticsearch.conf,
  +files/elasticsearch.init, +files/elasticsearch.init2,
  +files/elasticsearch.service, +metadata.xml:
  Added (bin) ebuilds for elasticsearch