@@ -1,3 +1,1 @@
-DIST elasticsearch-1.1.1.tar.gz 19872305 SHA256 564cd91bb55cc9d922e59679b0f666e0b4f0bd8c2b9cafd5fce4c55f3f50a835 SHA512 ab4d62b4a87d39e493441ff0b6f7a7dd5db4da742dcc5553c8977eafc7b24a999de5bccc6313ad8ca0e4b36c9d848a13730236e98e7651261c9cbc669901ac44 WHIRLPOOL 8460e43ad8218c2dc734b1d47f1024dd9d380b2d2331089b57f9807596d39e8dcfe817c172cb2c67f96944300ed1ddc6d7c5b36231e5a668e95ecdec0a2514b4
-DIST elasticsearch-1.2.1.tar.gz 19849249 SHA256 b2b270de2b520b4a2510454c75d3a6b9a9801b7d9a31754a731d2c0868cf9186 SHA512 f0c4f719c1878722541fff95702f4bcbef6e3ca54e49c3d12caabd1e61979c8d3a4d7e5612fca1e85654859cb8f91e4277190a32072f2274b0c65ef73c8a4f12 WHIRLPOOL 2de344c026ded648b4025ad4ba30c50f96208442d4a2a8cc285e0e106e5066fcd971dabf03c56ee41727788a66591347aa037f3de8af76fdd7774ef58e805791
 DIST elasticsearch-1.3.2.tar.gz 27949096 SHA256 7525d0a4db4f7eb791a1f8da97b081a5d8b44a2b232d8324877177bdee992ea4 SHA512 4a67531cf9927db466f70b4c572c472913533352de586f7e2c5f84ec9c7337002a0de0ee2bdb809e99b954bb8bd7d207baf723f1b53b2949702f838c85d6380a WHIRLPOOL 3b3edfefa6e49b2271ed107ecc8d2a84ab3db6834f85eb90c33fc8f9dfff4a815cbd2f3d7af2e6f6a9edfd2186508f6308bdee3846405cebf4ab89e8d13f0ffd
