@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  24 Nov 2014; Johann Schmitz <ercpe@gentoo.org> -elasticsearch-1.1.1.ebuild,
+  -elasticsearch-1.2.1.ebuild:
+  Dropped old versions
+
 *elasticsearch-1.3.2 (19 Aug 2014)
 
   19 Aug 2014;  <johann@gentoo.org> +elasticsearch-1.3.2.ebuild:
